k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmu-fe-host-service
spec:
  selector:
    app: rmu-fe-host
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
