k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rmu-fe-host.main
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rmu-fe-host-service
            port:
              number: 80
